--- a/src/main/resources/Proxy-Config.yml
+++ b/src/main/resources/Proxy-Config.yml
@@ -6,7 +6,7 @@ empty-resource-pack-name: empty
 match-rules:
   lobby:
     pack: rank
-  horrorfarmer:
+  horror-farmer:
     pack: horrorfarmer
     regex: hf_.*
   undertensai:
