增加提示语句

--- a/src/main/resources/Proxy-Config.yml
+++ b/src/main/resources/Proxy-Config.yml
@@ -19,6 +19,7 @@ match-rules:
 resource-packs:
   empty:
     url: https://io.ivampiresp.com/d/BingTang-Server/resourcepacks/empty/Empty.zip
+    show-action-bar: false
   rank:
     url: https://io.ivampiresp.com/d/BingTang-Server/resourcepacks/rank/Rank.zip
     force: true
