--- a/src/main/resources/Proxy-Config.yml
+++ b/src/main/resources/Proxy-Config.yml
@@ -18,14 +18,14 @@ match-rules:
 # 资源包
 resource-packs:
   empty:
-    url: https://src.yistars.net/resource-packs/Empty.zip
+    url: https://res.yistars.net/resource-packs/Empty.zip
     hash-url: https://res.yistars.net/get_resource_pack_hash.php?resource_pack=Empty
     show-action-bar: false
   rank:
-    url: https://src.yistars.net/resource-packs/Rank.zip
+    url: https://res.yistars.net/resource-packs/Rank.zip
     hash-url: https://res.yistars.net/get_resource_pack_hash.php?resource_pack=Rank
   horror-farmer:
-    url: https://src.yistars.net/resource-packs/HorrorFarmer.zip
+    url: https://res.yistars.net/resource-packs/HorrorFarmer.zip
     hash-url: https://res.yistars.net/get_resource_pack_hash.php?resource_pack=HorrorFarmer
   under-tensai:
     url: https://res.yistars.net/resource-packs/UnderTensai/UTP.zip
@@ -33,5 +33,5 @@ resource-packs:
     force: true
     hash: false
   uhc:
-    url: https://src.yistars.net/resource-packs/UHC.zip
+    url: https://res.yistars.net/resource-packs/UHC.zip
     hash-url: https://res.yistars.net/get_resource_pack_hash.php?resource_pack=UHC
